--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div id="main-content">
+        <h1>Legend of Zelda: BOTW Treasures List</h1>    
     <script src='index.js'></script>
 </body>
 </html>
