--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="main-content">
-        <h1>Legend of Zelda: BOTW Treasures List</h1>    
+        <h1>Legend of Zelda: BOTW Materials List</h1>    
     <script src='index.js'></script>
 </body>
 </html>
