--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div id="main-content">
-        <h1>Legend of Zelda: BOTW Materials List</h1>    
+        <h1>Legend of Zelda: BOTW Materials List</h1>   
+
+        <div id="imageContainer"></div>
     <script src='index.js'></script>
 </body>
 </html>
