names are displaying over images when mouse hovers over them

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>Legend of Zelda: BOTW Materials List</h1>   
 
         <div id="imageContainer"></div>
+        <!-- <div id="nameContainer"></div> -->
     <script src='index.js'></script>
 </body>
 </html>
